Alembic Override Frame does not update on playback. #56778

Closed
opened 2018-09-12 13:17:23 +02:00 by Jeff · 7 comments

ABCOverrideFrame.blend

{F4676068}System Information
OS: Windows 10, GPU: GTX1080ti

Blender Version
Broken: 2.8 ef32be25c1
Worked: 2.79b

Short description of error
Animated 'override frame' does not update when played back. Does update when scrolling the value slider.

Exact steps for others to reproduce the error
Load in any alembic ABC file and enable 'override frame' option and
add 2 keyframes (0-50) in the 'Frame' value slider. ABC file is too big to include in this bugreport.

[ABCOverrideFrame.blend](https://archive.blender.org/developer/F4676067/ABCOverrideFrame.blend) {[F4676068](https://archive.blender.org/developer/F4676068/stok_03.abc)}**System Information** OS: Windows 10, GPU: GTX1080ti **Blender Version** Broken: 2.8 ef32be25c17 Worked: 2.79b **Short description of error** Animated 'override frame' does not update when played back. Does update when scrolling the value slider. **Exact steps for others to reproduce the error** Load in any alembic ABC file and enable 'override frame' option and add 2 keyframes (0-50) in the 'Frame' value slider. ABC file is too big to include in this bugreport.
Author

Added subscriber: @JeffMetz

Added subscriber: @JeffMetz

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Sergey Sharybin was assigned by Bastien Montagne 2018-09-19 11:32:46 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Confirmed. @Sergey, am going to summon you here, since I believe there may be something wrong in DEG - animation is in the CacheFile datablock, hence not in Object one (as any other modifier would be). And it is never evaluated afaict, even though dependency looks correct?

depsgraph.png

ABCOverrideFrame.blend

Confirmed. @Sergey, am going to summon you here, since I believe there may be something wrong in DEG - animation is in the CacheFile datablock, hence not in Object one (as any other modifier would be). And it is never evaluated afaict, even though dependency looks correct? ![depsgraph.png](https://archive.blender.org/developer/F4751851/depsgraph.png) [ABCOverrideFrame.blend](https://archive.blender.org/developer/F4751864/ABCOverrideFrame.blend)

This issue was referenced by 2f4bd63239

This issue was referenced by 2f4bd632396c215d6398a0b4e16d03f2fd00b17f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56778
No description provided.