Fix T56778: Alembic Override Frame does not update on playback